--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,14 @@
 {
-  "extends": "@react-native/typescript-config"
+  "extends": "@react-native/typescript-config",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@constants/*": ["app/constants/*"],
+      "@components/*": ["app/components/*"],
+      "@navigation/*": ["app/navigation/*"],
+      "@hooks/*": ["app/hooks/*"],
+      "@screens/*": ["app/screens/*"],
+      "@/*": ["app/*"]
+    }
+  }
 }
