--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.80.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
