--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "react": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-native": "0.80.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
