refactor folders, schemas added, table notes fixed, and singleton added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@navigation/*": ["app/navigation/*"],
       "@hooks/*": ["app/hooks/*"],
       "@screens/*": ["app/screens/*"],
+      "@schemas/*": ["app/schemas/*"],
       "@/*": ["app/*"]
     }
   }
