editNote screen on progress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@schemas/*": ["app/schemas/*"],
       "@db/*": ["app/db/*"],
       "@utils/*": ["app/utils/*"],
+      "@context/*": ["app/context/*"],
     }
   }
 }
