--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-hook-form": "^7.60.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-worklets": "^0.4.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
