--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.1.8",
     "@hookform/resolvers": "^5.1.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/drawer": "^7.5.5",
